
* Unreleased

** Added

- *vui-components.el*: New component library with higher-level components built on vui primitives.
- =vui-collapsible=: Togglable section that expands/collapses content. Supports both uncontrolled (manages own state) and controlled (=:expanded= prop) modes. Features customizable indicators, title face, indentation, and proper nested indentation via context propagation.

** Fixed

- *Keymap hierarchy*: =special-mode-map= bindings (like =h= for help) were inaccessible because =set-keymap-parent= overwrote the parent set by =define-derived-mode=. Now uses =make-composed-keymap= to include both =widget-keymap= and =special-mode-map=.

** Added

- =vui-quit= command bound to =q=: Quits window when outside widget fields, self-inserts when inside (so you can type "q" in text inputs).
- =vui-refresh= command bound to =g=: Re-renders the UI with current state when outside widget fields, self-inserts when inside. Applications needing custom refresh logic (e.g., re-fetching data) can override in their derived mode.
- =vui-button= now accepts =:tab-order= and =:keymap= props. Use =:tab-order -1= to make a button non-tabbable, and =:keymap= to define custom key bindings active when point is on the button.

* v1.0.0 - 2025-12-28

** Breaking Changes

- *Symbol Prefix Rename*: All public macros now use the =vui-= prefix to comply with MELPA naming conventions:
  - =defcomponent= → =vui-defcomponent=
  - =defcontext= → =vui-defcontext=
  - =use-effect= → =vui-use-effect=
  - =use-ref= → =vui-use-ref=
  - =use-callback= → =vui-use-callback=
  - =use-callback*= → =vui-use-callback*=
  - =use-memo= → =vui-use-memo=
  - =use-memo*= → =vui-use-memo*=
  - =use-async= → =vui-use-async=

  See the README section "Using Shorter Names (Shorthands)" for how to use aliases or =read-symbol-shorthands= if you prefer the shorter names.

* v1.0.0-rc.3 - 2025-12-20

** Added
